--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "ejs": "^3.1.9",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-ejs": "^4.3.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
+    "koa-views": "^8.0.0",
     "mongoose": "^7.2.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2"
   }
 }
